--- a/config_window.rc
+++ b/config_window.rc
@@ -31,12 +31,6 @@ STYLE DS_MODALFRAME | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "pj64-wiiu-gcn config"
 FONT 8, "MS Sans Serif"
 BEGIN
-    CONTROL         "Swap Z/L triggers",IDC_SWAPZL,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,9,9,73,10
-    CONTROL         "Analog triggers",IDC_ANALOGTRIG,"Button",
-                    BS_AUTOCHECKBOX | WS_TABSTOP,9,23,63,10
-    CONTROL         "GC Z/L as N64 Z",IDC_ZL_AS_Z,"Button",BS_AUTOCHECKBOX | 
-                    WS_TABSTOP,9,37,70,10 
     CONTROL         "Async polling",IDC_ASYNC,"Button",BS_AUTOCHECKBOX | 
                     WS_TABSTOP,134,9,73,10
     PUSHBUTTON      "Test adapter pollrate",IDC_TESTPOLL,125,34,75,14
@@ -44,7 +38,7 @@ BEGIN
     LTEXT           "Analog stick range",IDC_STATIC,19,71,60,8
     LTEXT           "Deadzone",IDC_STATIC,19,96,60,8
     LTEXT           "Trigger threshold",IDC_STATIC,20,121,60,8
-    LTEXT           "C-Stick threshold",IDC_STATIC,20,146,60,8
+    LTEXT           "Stick A2D threshold",IDC_STATIC,20,146,60,8
     CTEXT           "0%",IDC_LABEL_RANGE,85,87,105,8
     CTEXT           "0%",IDC_LABEL_DZ,85,111,105,8
     CTEXT           "0%",IDC_LABEL_TRIGTHRES,85,136,105,8
@@ -57,15 +51,6 @@ BEGIN
                     WS_TABSTOP,85,119,105,17
     CONTROL         "Slider1",IDC_SLIDER_CSTICKTHRES,"msctls_trackbar32",
                     WS_TABSTOP,85,144,105,17
-    GROUPBOX        "GC X/Y function",IDC_STATIC,10,184,125,82
-    CONTROL         "Y/X as N64 C-Left/Right",IDC_XY_CB,"Button",
-                    BS_AUTORADIOBUTTON,20,199,94,10
-    CONTROL         "Y as N64 L, X as All C-Buttons",IDC_Y_AS_L,"Button",
-                    BS_AUTORADIOBUTTON,20,215,111,10
-    CONTROL         "Tony Hawk",IDC_XY_TONYHAWK,"Button",
-                    BS_AUTORADIOBUTTON,20,231,111,10
-    CONTROL         "None",IDC_XY_NONE,"Button",
-                    BS_AUTORADIOBUTTON,20,247,111,10
     PUSHBUTTON      "Load defaults",IDC_DEFAULTS,145,189,55,14
     PUSHBUTTON      "Save config",IDC_SAVE,145,209,55,56
 END
