add adapter port remapping

--- a/config_window.rc
+++ b/config_window.rc
@@ -96,6 +96,7 @@ BEGIN
     CONTROL "Force plugged in", IDC_MAPPING_FORCEPLUGGED, "Button", BS_AUTOCHECKBOX | WS_TABSTOP,
             GRP_X+5, GRP_Y+20, 80, 10 
     
+    COMBOBOX IDC_MAPPING_PORT,      GRP_X+95, GRP_Y+5,  90, 73, CBS_DROPDOWN | WS_TABSTOP
     COMBOBOX IDC_MAPPING_ACCESSORY, GRP_X+95, GRP_Y+20, 90, 73, CBS_DROPDOWN | WS_TABSTOP
 
     #undef GRP_X 
